[gd_scene load_steps=2 format=3 uid="uid://crrcw65irwauy"]

[ext_resource type="Script" uid="uid://0876b0x85otd" path="res://scripts/shop_slot.gd" id="1_0lmm0"]

[node name="ShopSlot" type="VBoxContainer"]
offset_left = -2.0
offset_top = 17.0
offset_right = 268.0
offset_bottom = 234.0
script = ExtResource("1_0lmm0")

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2

[node name="CostLabel" type="Label" parent="."]
layout_mode = 2

[node name="BuyButton" type="Button" parent="."]
layout_mode = 2
